--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-<script src="script.js"></script>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Rock Paper Scissors</title>
+</head>
+
+<body>
+    <div id="choices">
+        <button id="rock">Rock</button>
+        <button id="paper">Paper</button>
+        <button id="scissors">Scissors</button>
+        <button id = "resetGame">Reset game</button>
+    </div>
+    <div id="results">
+        <p id="humanChoice"></p>
+        <p id="computerChoice"></p>
+        <p id="roundResult"></p>
+        <p id="humanScore">Human score: 0</p>
+        <p id="computerScore">Computer score: 0</p>
+    </div>
+    <script src="script.js"></script>
+</body>
+
+</html>
